Added header comments

--- a/P1/index.html
+++ b/P1/index.html
@@ -5,7 +5,7 @@
 * Author: Class Instructor
 * Modified By: Sherwin Fong
 *
-* Project 5, P1
+* PHP-Project, P1
 * Description: The html file provided for the calendar,
 	modified with the location of the php file. The rest is
 	unchanged. calendar-ajax.js and fullcalendar.min.js are provided to
